# gib

./: .gitignore  README.md  READMELOCAL.md  git_help.txt  install.sh  llama_setup.sh  pyproject.toml
python/: .python-version
src/: explain.sh
src/gib/: commands.py  config.json  git.py  llm.py  local_llm.py  utils.py
src/gitbhasa/: commands.py  git.py  llm.py
src/llm/: llama_generate.sh  openai_generate.sh
