[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gitbhasa"
version = "0.1"
authors = [
  { name="Alec Sharp", email="alecsharpie@gmail.com" },
]
description = "A CLI tool for git workflows using LLMs"
readme = "README.md"
requires-python = ">=3.10.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click",
    "llama-cpp-python"
]

[project.urls]
"Homepage" = "https://github.com/alecsharpie/gitbhasa"

[project.scripts]
gib = "gitbhasa.commands:cli"
