[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gib"
version = "0.1"
authors = [
  { name="Alec Sharp", email="alecsharpie@gmail.com" },
]
description = "A CLI tool for git workflows using LLMs"
readme = "README.md"
requires-python = ">=3.8.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click",
    "openai"
]

[project.optional-dependencies]
local = ["llama-cpp-python"]

[project.urls]
"Homepage" = "https://github.com/alecsharpie/gib"

[project.scripts]
gib = "gib.commands:cli"
